# ats

./: README.md  app.py  pyproject.toml
src/: __init__.py  accept.py
static/styles/: applications.css  companies.css  global.css
static/styles/applications/: create.css  view.css
static/userscripts/: ats-redirect.user.js
templates/: index.jinja  skeleton.jinja
templates/applications/: create.jinja  list.jinja  view.jinja
templates/companies/: list.jinja
