[project]
name = "ats"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
